--- a/websocket-server/Cargo.toml
+++ b/websocket-server/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+tokio = { version = "1.24.1", features = ["rt-multi-thread"]}
 tungstenite = "0.18.0"
+twitch-irc = "5.0.0"
